# dynamic-settings

./: .dockerignore  .gitignore  404.html  Cargo.toml  Dockerfile  LICENSE  README.md  index.html
.github/workflows/: build-docs.yml  docker-publish.yml  pull-request.yml
client_libraries/: index.html
development/: index.html
docs/: mkdocs.yml
docs/docs/: client_libraries.md  development.md  how_to_use.md  index.md  tutorials.md
how_to_use/: index.html
migrations/: 20241225180417_init.down.sql  20241225180417_init.up.sql
search/: search_index.json
src/: config.rs  errors.rs  lib.rs  main.rs  startup.rs
src/enums/: mod.rs  settings_value_type.rs
src/models/: db.rs  mod.rs  query.rs  request.rs  settings.rs
src/repository/db/: mod.rs  settings.rs
src/repository/postgres/: mod.rs  settings.rs
src/routes/: mod.rs
src/routes/settings/: create.rs  delete.rs  get.rs  mod.rs  post.rs  update.rs
src/utils/: mod.rs  validate_settings_value.rs
tests/routes/: add_settings.rs  auth.rs  create_settings.rs  delete_settings.rs  get_settings_by_key.rs  health_check.rs  helpers.rs  main.rs  update_settings.rs
tutorials/: index.html
ui/: .env.production  index.html  package-lock.json  package.json
ui/src/: App.tsx
ui/src/api/: authApi.ts  settingsApi.ts
ui/src/components/: KeyInput.tsx  PageHeader.tsx  TypeInput.tsx  ValueInput.tsx
ui/src/pages/: CreateSettings.tsx  ManageSettings.tsx  SettingsList.tsx  auth.tsx
ui/src/types/: settings.ts
ui/src/utils/: BadgeColor.ts  FormatDate.test.ts  FormatDate.ts  formaters.ts
