[package]
name = "dynamic_settings"
version = "0.1.0"
authors = ["Mark Antipin <mr.antipin@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "dynamic_settings"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
config = "0.11.0"
dotenv = "0.15.0"
serde_json = "1.0.134"
derive_more = "0.99.18"
uuid = { version = "1.12.0", features = ["v4"] }
fjall = "2.5.0"
rmp-serde = "1.3.0"
actix-cors = "0.7.0"
env_logger = "0.11.6"
log = "0.4.25"
actix-files="0.6.6"
